force-app/main/default/objects/Branch__c/fields/Account_Classification__c.field-meta.xml
<CustomField>
    <fullName>Account_Classification__c</fullName>
    <description>Defined for the Inter-Branch Manual Invoice record type</description>
    <label>Account Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-SEZ</fullName>
                <default>true</default>
                <label>Non - SEZ</label>
            </value>
            <value>
                <fullName>SEZ With Tax</fullName>
            </value>
            <value>
                <fullName>SEZ Without Tax</fullName>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>