force-app/main/default/objects/Branch__c/fields/Authorized_Signatory__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Signatory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Authorized Signatory</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AuthorizedSignatory</relationshipName>
    <type>Lookup</type>
</CustomField>