force-app/main/default/objects/Branch__c/fields/Billing_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Billing_Sequence__c</fullName>
    <label>Billing Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>