force-app/main/default/objects/Branch__c/fields/CC_Note_Sequence__c.field-meta.xml
<CustomField>
    <fullName>CC_Note_Sequence__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Commercial Credit note</inlineHelpText>
    <label>CC Note Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>