force-app/main/default/objects/Branch__c/fields/Finance_CC__c.field-meta.xml
<CustomField>
    <fullName>Finance_CC__c</fullName>
    <description>Secondary finance contacts</description>
    <label>Finance CC</label>
    <type>TextArea</type>
</CustomField>