force-app/main/default/objects/Branch__c/fields/Finance_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Finance_Email_ID__c</fullName>
    <description>Primary contact for finance notifications</description>
    <inlineHelpText>Primary contact for finance related notifications</inlineHelpText>
    <label>Finance Email ID</label>
    <type>Email</type>
</CustomField>