force-app/main/default/objects/Branch__c/fields/Finance_Email_ID_User__c.field-meta.xml
<CustomField>
    <fullName>Finance_Email_ID_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The finance team user on the branch</description>
    <label>Finance Email ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Branches1</relationshipName>
    <type>Lookup</type>
</CustomField>