force-app/main/default/objects/Branch__c/fields/GST_Credit_Note_Sequence__c.field-meta.xml
<CustomField>
    <fullName>GST_Credit_Note_Sequence__c</fullName>
    <defaultValue>0</defaultValue>
    <label>GST Credit Note Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>