force-app/main/default/objects/Branch__c/fields/GSTIN__c.field-meta.xml
<CustomField>
    <fullName>GSTIN__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <label>GSTIN No.</label>
    <length>15</length>
    <type>Text</type>
</CustomField>