force-app/main/default/objects/Branch__c/fields/Inter_Branch_Sequence_MI__c.field-meta.xml
<CustomField>
    <fullName>Inter_Branch_Sequence_MI__c</fullName>
    <label>Inter Branch Sequence MI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>