force-app/main/default/objects/Branch__c/fields/IPO_Monitoring_Sequence__c.field-meta.xml
<CustomField>
    <fullName>IPO_Monitoring_Sequence__c</fullName>
    <label>IPO Monitoring Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>