force-app/main/default/objects/Branch__c/fields/ISD_Branch__c.field-meta.xml
<CustomField>
    <fullName>ISD_Branch__c</fullName>
    <defaultValue>&apos;Gurgaon&apos;</defaultValue>
    <label>ISD Branch</label>
    <length>100</length>
    <type>Text</type>
</CustomField>