force-app/main/default/objects/Branch__c/fields/MPRA_SoW_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>MPRA_SoW_Reference_Number__c</fullName>
    <label>MPRA SoW Reference Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>