force-app/main/default/objects/Branch__c/fields/State_Code__c.field-meta.xml
<CustomField>
    <fullName>State_Code__c</fullName>
    <label>State Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>