force-app/main/default/objects/Branch__c/fields/Update_Inter_Branch_Billing_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Update_Inter_Branch_Billing_Sequence__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Update Inter-Branch Billing Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>