force-app/main/default/objects/Branch__c/fields/Update_ISD_Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Update_ISD_Sequence_Number__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Update ISD Sequence Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>