force-app/main/default/objects/Branch__c/fields/Updated_Billing_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Updated_Billing_Sequence__c</fullName>
    <label>Updated Billing Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>