force-app/main/default/objects/Branch__c/fields/Updated_GST_Credit_Note_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Updated_GST_Credit_Note_Sequence__c</fullName>
    <label>Updated GST Credit Note Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>