force-app/main/default/objects/Branch__c/fields/Updated_Surveillance_fees_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Updated_Surveillance_fees_Sequence__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Updated Surveillance fees Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>