force-app/main/default/objects/Branch__c/fields/Updateed_CC_Note_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Updateed_CC_Note_Sequence__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Updateed CC Note Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>