force-app/main/default/objects/Branch__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OFAC_Approver__c</columns>
    <columns>Telephone__c</columns>
    <columns>Zip_Postal_Code__c</columns>
    <columns>Street__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>State_Code__c</columns>
    <columns>Country__c</columns>
    <columns>GSTIN__c</columns>
    <columns>PAN__c</columns>
    <columns>Branch_Code__c</columns>
    <columns>Authorized_Signatory__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Updated_Billing_Sequence__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>